samples/_failures_safe/1761092859_b641d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98f6ba5d.c: In function ‘main’:
./samples/SAFE/__tmp_98f6ba5d.c:165:12: error: missing terminating " character
  165 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_98f6ba5d.c:165:5: error: expected expression at end of input
  165 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_98f6ba5d.c:165:5: error: expected declaration or statement at end of input
